# CLoxpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: chunk.hpp  common.hpp  vm.hpp
src/: chunk.cpp  debug.cpp  main.cpp  value.cpp  vm.cpp
